--- a/Lab2_prompt.ipynb
+++ b/Lab2_prompt.ipynb
@@ -199,12 +199,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "id": "3cf26d1b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-11T14:53:12.688659Z",
-     "start_time": "2024-03-11T14:53:12.659029Z"
+     "end_time": "2024-03-11T20:12:39.365872Z",
+     "start_time": "2024-03-11T20:12:39.291991Z"
     }
    },
    "outputs": [
@@ -219,10 +219,18 @@
     {
      "data": {
       "text/plain": "<IPython.core.display.HTML object>",
-      "text/html": "<div id='7d684661-ae20-4afa-9390-b053421437bf'></div>"
+      "text/html": "<div id='f28ce451-6373-4bf0-a1b8-9492e42135c0'></div>"
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\matplotlib\\animation.py:889: UserWarning: Animation was deleted without rendering anything. This is most likely not intended. To prevent deletion, assign the Animation to a variable, e.g. `anim`, that exists until you have outputted the Animation using `plt.show()` or `anim.save()`.\n",
+      "  warnings.warn(\n"
+     ]
     }
    ],
    "source": [
